touched up footer and fixed spacing on socials

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .page-footer {
-    background-color: #171D29;
-    color: white;
+    background-color: rgb(23, 29, 41, 0.9);
+    color: rgba(255, 255, 255, 0.55);
     height: 70px;
 }
